--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
